5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1671_1099.log
== TEST (2019-04-24 14:08:08) 
-- CODE:
a = float(input("Lado x: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
if ((a>= b+c) or (b>= a+c) or (c>= a+b)):
	print ("invalido")
else:
	if ((a==b) and (b==c)):
		print("equilatero")
	else:
		if ((a==b) or (b==c) or (c==a)):
			print("isosceles")
		else:
			print("escaleno")
	

-- OUTPUT:
isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:08:08) 
-- CODE:
a = float(input("Lado x: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
if ((a>= b+c) or (b>= a+c) or (c>= a+b)):
	print ("invalido")
else:
	if ((a==b) and (b==c)):
		print("equilatero")
	else:
		if ((a==b) or (b==c) or (c==a)):
			print("isosceles")
		else:
			print("escaleno")
	

-- OUTPUT:
isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:08:09) 
-- CODE:
a = float(input("Lado x: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
if ((a>= b+c) or (b>= a+c) or (c>= a+b)):
	print ("invalido")
else:
	if ((a==b) and (b==c)):
		print("equilatero")
	else:
		if ((a==b) or (b==c) or (c==a)):
			print("isosceles")
		else:
			print("escaleno")
	

-- EXECUTION TIME:
0.12588
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:08:10) 
-- CODE:
a = float(input("Lado x: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
if ((a>= b+c) or (b>= a+c) or (c>= a+b)):
	print ("invalido")
else:
	if ((a==b) and (b==c)):
		print("equilatero")
	else:
		if ((a==b) or (b==c) or (c==a)):
			print("isosceles")
		else:
			print("escaleno")
	

-- OUTPUT:
isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:10:47) 
-- CODE:
a = float(input("Lado x: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
if ((a>= b+c) or (b>= a+c) or (c>= a+b)):
	print ("invalido")
else:
	if ((a==b) and (b==c)and (c==a)):
		print("equilatero")
	else:
		if ((a==b) or (b==c) or (c==a)):
			print("isosceles")
		else:
			print("escaleno")
	

-- OUTPUT:
isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:10:49) 
-- CODE:
a = float(input("Lado x: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
if ((a>= b+c) or (b>= a+c) or (c>= a+b)):
	print ("invalido")
else:
	if ((a==b) and (b==c)and (c==a)):
		print("equilatero")
	else:
		if ((a==b) or (b==c) or (c==a)):
			print("isosceles")
		else:
			print("escaleno")
	

-- EXECUTION TIME:
0.213848
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:21:35) 
-- CODE:
a = float(input("Lado x: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas", a, "," , b ,",", c)
if(a or b or c < 0):
	print("invalido")
	
if ((a==b) and (b==c)and (c==a)):
	print("equilatero")
elif(a==b) or (a==c) or (c==b):
	print("isosceles")
elif(a!=b) and (b!=c) and (c!=a):
	print("escaleno")

	
		

	

-- OUTPUT:
Entradas 2.0 , 4.0 , 4.0
invalido
isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:21:36) 
-- CODE:
a = float(input("Lado x: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas", a, "," , b ,",", c)
if(a or b or c < 0):
	print("invalido")
	
if ((a==b) and (b==c)and (c==a)):
	print("equilatero")
elif(a==b) or (a==c) or (c==b):
	print("isosceles")
elif(a!=b) and (b!=c) and (c!=a):
	print("escaleno")

	
		

	

-- EXECUTION TIME:
0.186854
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas 2.0 , 4.0 , 4.0
invalido
isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas 3.3 , 4.4 , 5.5
invalido
escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas 1.0 , 2.0 , 7.0
invalido
escaleno
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:21:37) 
-- CODE:
a = float(input("Lado x: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas", a, "," , b ,",", c)
if(a or b or c < 0):
	print("invalido")
	
if ((a==b) and (b==c)and (c==a)):
	print("equilatero")
elif(a==b) or (a==c) or (c==b):
	print("isosceles")
elif(a!=b) and (b!=c) and (c!=a):
	print("escaleno")

	
		

	

-- OUTPUT:
Entradas 2.0 , 4.0 , 4.0
invalido
isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:23:15) 
-- CODE:
a = float(input("Lado x: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas", a, "," , b ,",", c)
if(a<=0) or (b<=0) or (c <= 0):
	print("invalido")
	
if ((a==b) and (b==c)and (c==a)):
	print("equilatero")
elif(a==b) or (a==c) or (c==b):
	print("isosceles")
elif(a!=b) and (b!=c) and (c!=a):
	print("escaleno")
else:
	print("invalido")

	
		

	

-- OUTPUT:
Entradas 2.0 , 4.0 , 4.0
isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:23:17) 
-- CODE:
a = float(input("Lado x: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas", a, "," , b ,",", c)
if(a<=0) or (b<=0) or (c <= 0):
	print("invalido")
	
if ((a==b) and (b==c)and (c==a)):
	print("equilatero")
elif(a==b) or (a==c) or (c==b):
	print("isosceles")
elif(a!=b) and (b!=c) and (c!=a):
	print("escaleno")
else:
	print("invalido")

	
		

	

-- EXECUTION TIME:
0.195267
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas 2.0 , 4.0 , 4.0
isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas 3.3 , 4.4 , 5.5
escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas 1.0 , 2.0 , 7.0
escaleno
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:23:18) 
-- CODE:
a = float(input("Lado x: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas", a, "," , b ,",", c)
if(a<=0) or (b<=0) or (c <= 0):
	print("invalido")
	
if ((a==b) and (b==c)and (c==a)):
	print("equilatero")
elif(a==b) or (a==c) or (c==b):
	print("isosceles")
elif(a!=b) and (b!=c) and (c!=a):
	print("escaleno")
else:
	print("invalido")

	
		

	

-- OUTPUT:
Entradas 2.0 , 4.0 , 4.0
isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:26:19) 
-- CODE:
a = float(input("Lado x: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print(a, b , c)
if((a<=0) or (b<=0) or (c <= 0) and ((a>b+c)or(b>a+c)or(c>a+b)):
	print("invalido")
	
if ((a==b) and (b==c)and (c==a)):
	print("equilatero")
elif(a==b) or (a==c) or (c==b):
	print("isosceles")
elif(a!=b) and (b!=c) and (c!=a):
	print("escaleno")
else:
	print("invalido")

	
		

	

-- ERROR:
File "XXXX", line 5
    if((a<=0) or (b<=0) or (c <= 0) and ((a>b+c)or(b>a+c)or(c>a+b)):
                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:26:41) 
-- CODE:
a = float(input("Lado x: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print(a, b , c)
if(((a<=0) or (b<=0) or (c <= 0)) and ((a>b+c)or(b>a+c)or(c>a+b)):
	print("invalido")
	
if ((a==b) and (b==c)and (c==a)):
	print("equilatero")
elif(a==b) or (a==c) or (c==b):
	print("isosceles")
elif(a!=b) and (b!=c) and (c!=a):
	print("escaleno")
else:
	print("invalido")

	
		

	

-- ERROR:
File "XXXX", line 5
    if(((a<=0) or (b<=0) or (c <= 0)) and ((a>b+c)or(b>a+c)or(c>a+b)):
                                                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:29:58) 
-- CODE:
a = float(input("Lado x: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print(a, b , c)
if(a<=0) or (b<=0) or (c <= 0):
	print("invalido")
else:
	if(a>b+c)or (b>=c+a)or (c>=a+b):
		print("invalido")
	elif ((a==b) and (b==c)and (c==a)):
		print("equilatero")
	elif(a==b) or (a==c) or (c==b):
		print("isosceles")
	elif(a!=b) and (b!=c) and (c!=a):
		print("escaleno")
	else:
		print("invalido")

	
		

	

-- OUTPUT:
2.0 4.0 4.0
isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:30:55) 
-- CODE:
a = float(input("Lado x: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print(a,",", b,"," , c)
if(a<=0) or (b<=0) or (c <= 0):
	print("Tipo de triangulo: invalido")
else:
	if(a>b+c)or (b>=c+a)or (c>=a+b):
		print("invalido")
	elif ((a==b) and (b==c)and (c==a)):
		print("equilatero")
	elif(a==b) or (a==c) or (c==b):
		print("isosceles")
	elif(a!=b) and (b!=c) and (c!=a):
		print("escaleno")
	else:
		print("invalido")

	
		

	

-- OUTPUT:
2.0 , 4.0 , 4.0
isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:31:19) 
-- CODE:
a = float(input("Lado x: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print(a,",", b,"," , c)
if(a<=0) or (b<=0) or (c <= 0):
	print("Tipo de triangulo: invalido")
else:
	if(a>b+c)or (b>=c+a)or (c>=a+b):
		print("Tipo de triangulo:invalido")
	elif ((a==b) and (b==c)and (c==a)):
		print("Tipo de triangulo:equilatero")
	elif(a==b) or (a==c) or (c==b):
		print("Tipo de triangulo:isosceles")
	elif(a!=b) and (b!=c) and (c!=a):
		print("Tipo de triangulo:escaleno")
	else:
		print("Tipo de triangulo:invalido")

	
		

	

-- OUTPUT:
2.0 , 4.0 , 4.0
Tipo de triangulo:isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:31:22) 
-- CODE:
a = float(input("Lado x: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print(a,",", b,"," , c)
if(a<=0) or (b<=0) or (c <= 0):
	print("Tipo de triangulo: invalido")
else:
	if(a>b+c)or (b>=c+a)or (c>=a+b):
		print("Tipo de triangulo:invalido")
	elif ((a==b) and (b==c)and (c==a)):
		print("Tipo de triangulo:equilatero")
	elif(a==b) or (a==c) or (c==b):
		print("Tipo de triangulo:isosceles")
	elif(a!=b) and (b!=c) and (c!=a):
		print("Tipo de triangulo:escaleno")
	else:
		print("Tipo de triangulo:invalido")

	
		

	

-- EXECUTION TIME:
0.185589
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
2.0 , 4.0 , 4.0
Tipo de triangulo:isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
3.3 , 4.4 , 5.5
Tipo de triangulo:escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
1.0 , 2.0 , 7.0
Tipo de triangulo:invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:31:47) 
-- CODE:
a = float(input("Lado x: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:",a,",", b,"," , c)
if(a<=0) or (b<=0) or (c <= 0):
	print("Tipo de triangulo: invalido")
else:
	if(a>b+c)or (b>=c+a)or (c>=a+b):
		print("Tipo de triangulo:invalido")
	elif ((a==b) and (b==c)and (c==a)):
		print("Tipo de triangulo:equilatero")
	elif(a==b) or (a==c) or (c==b):
		print("Tipo de triangulo:isosceles")
	elif(a!=b) and (b!=c) and (c!=a):
		print("Tipo de triangulo:escaleno")
	else:
		print("Tipo de triangulo: invalido")

	
		

	

-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo:isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:31:48) 
-- CODE:
a = float(input("Lado x: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:",a,",", b,"," , c)
if(a<=0) or (b<=0) or (c <= 0):
	print("Tipo de triangulo: invalido")
else:
	if(a>b+c)or (b>=c+a)or (c>=a+b):
		print("Tipo de triangulo:invalido")
	elif ((a==b) and (b==c)and (c==a)):
		print("Tipo de triangulo:equilatero")
	elif(a==b) or (a==c) or (c==b):
		print("Tipo de triangulo:isosceles")
	elif(a!=b) and (b!=c) and (c!=a):
		print("Tipo de triangulo:escaleno")
	else:
		print("Tipo de triangulo: invalido")

	
		

	

-- EXECUTION TIME:
0.13582
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo:isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo:escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo:invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:31:50) 
-- CODE:
a = float(input("Lado x: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:",a,",", b,"," , c)
if(a<=0) or (b<=0) or (c <= 0):
	print("Tipo de triangulo: invalido")
else:
	if(a>b+c)or (b>=c+a)or (c>=a+b):
		print("Tipo de triangulo:invalido")
	elif ((a==b) and (b==c)and (c==a)):
		print("Tipo de triangulo:equilatero")
	elif(a==b) or (a==c) or (c==b):
		print("Tipo de triangulo:isosceles")
	elif(a!=b) and (b!=c) and (c!=a):
		print("Tipo de triangulo:escaleno")
	else:
		print("Tipo de triangulo: invalido")

	
		

	

-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo:isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:31:58) 
-- CODE:
a = float(input("Lado x: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:",a,",", b,"," , c)
if(a<=0) or (b<=0) or (c <= 0):
	print("Tipo de triangulo: invalido")
else:
	if(a>b+c)or (b>=c+a)or (c>=a+b):
		print("Tipo de triangulo:invalido")
	elif ((a==b) and (b==c)and (c==a)):
		print("Tipo de triangulo:equilatero")
	elif(a==b) or (a==c) or (c==b):
		print("Tipo de triangulo:isosceles")
	elif(a!=b) and (b!=c) and (c!=a):
		print("Tipo de triangulo:escaleno")
	else:
		print("Tipo de triangulo: invalido")

	
		

	

-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo:isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:32:04) 
-- CODE:
a = float(input("Lado x: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:",a,",", b,"," , c)
if(a<=0) or (b<=0) or (c <= 0):
	print("Tipo de triangulo: invalido")
else:
	if(a>b+c)or (b>=c+a)or (c>=a+b):
		print("Tipo de triangulo:invalido")
	elif ((a==b) and (b==c)and (c==a)):
		print("Tipo de triangulo:equilatero")
	elif(a==b) or (a==c) or (c==b):
		print("Tipo de triangulo:isosceles")
	elif(a!=b) and (b!=c) and (c!=a):
		print("Tipo de triangulo:escaleno")
	else:
		print("Tipo de triangulo: invalido")

	
		

	

-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo:isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:32:12) 
-- CODE:
a = float(input("Lado x: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:",a,",", b,"," , c)
if(a<=0) or (b<=0) or (c <= 0):
	print("Tipo de triangulo: invalido")
else:
	if(a>b+c)or (b>=c+a)or (c>=a+b):
		print("Tipo de triangulo:invalido")
	elif ((a==b) and (b==c)and (c==a)):
		print("Tipo de triangulo:equilatero")
	elif(a==b) or (a==c) or (c==b):
		print("Tipo de triangulo:isosceles")
	elif(a!=b) and (b!=c) and (c!=a):
		print("Tipo de triangulo:escaleno")
	else:
		print("Tipo de triangulo: invalido")

	
		

	

-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo:isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-24 14:32:30) 
-- CODE:
a = float(input("Lado x: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:",a,",", b,"," , c)
if(a<=0) or (b<=0) or (c <= 0):
	print("Tipo de triangulo: invalido")
else:
	if(a>b+c)or (b>=c+a)or (c>=a+b):
		print("Tipo de triangulo: invalido")
	elif ((a==b) and (b==c)and (c==a)):
		print("Tipo de triangulo: equilatero")
	elif(a==b) or (a==c) or (c==b):
		print("Tipo de triangulo: isosceles")
	elif(a!=b) and (b!=c) and (c!=a):
		print("Tipo de triangulo: escaleno")
	else:
		print("Tipo de triangulo: invalido")

	
		

	

-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-24 14:32:32) 
-- CODE:
a = float(input("Lado x: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:",a,",", b,"," , c)
if(a<=0) or (b<=0) or (c <= 0):
	print("Tipo de triangulo: invalido")
else:
	if(a>b+c)or (b>=c+a)or (c>=a+b):
		print("Tipo de triangulo: invalido")
	elif ((a==b) and (b==c)and (c==a)):
		print("Tipo de triangulo: equilatero")
	elif(a==b) or (a==c) or (c==b):
		print("Tipo de triangulo: isosceles")
	elif(a!=b) and (b!=c) and (c!=a):
		print("Tipo de triangulo: escaleno")
	else:
		print("Tipo de triangulo: invalido")

	
		

	

-- EXECUTION TIME:
0.209008
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:05:35) 
-- CODE:
a = float(input("Lado x: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:",a,",", b,"," , c)
if(a<=0) or (b<=0) or (c <= 0):
	print("Tipo de triangulo: invalido")
else:
	if(a>b+c)or (b>=c+a)or (c>=a+b):
		print("Tipo de triangulo: invalido")
	elif ((a==b) and (b==c)and (c==a)):
		print("Tipo de triangulo: equilatero")
	elif(a==b) or (a==c) or (c==b):
		print("Tipo de triangulo: isosceles")
	elif(a!=b) and (b!=c) and (c!=a):
		print("Tipo de triangulo: escaleno")
	

	
		

	

-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 13:05:37) 
-- CODE:
a = float(input("Lado x: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:",a,",", b,"," , c)
if(a<=0) or (b<=0) or (c <= 0):
	print("Tipo de triangulo: invalido")
else:
	if(a>b+c)or (b>=c+a)or (c>=a+b):
		print("Tipo de triangulo: invalido")
	elif ((a==b) and (b==c)and (c==a)):
		print("Tipo de triangulo: equilatero")
	elif(a==b) or (a==c) or (c==b):
		print("Tipo de triangulo: isosceles")
	elif(a!=b) and (b!=c) and (c!=a):
		print("Tipo de triangulo: escaleno")
	

	
		

	

-- EXECUTION TIME:
0.225294
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 13:06:26) 
-- CODE:
a = float(input("Lado x: "))
b = float(input("Lado b: "))
c = float(input("Lado c: "))
print("Entradas:",a,",", b,"," , c)
if(a<=0) or (b<=0) or (c <= 0):
	print("Tipo de triangulo: invalido")
else:
	if(a>b+c)or (b>=c+a)or (c>=a+b):
		print("Tipo de triangulo: invalido")
	elif ((a==b) and (b==c)and (c==a)):
		print("Tipo de triangulo: equilatero")
	elif(a==b) or (a==c) or (c==b):
		print("Tipo de triangulo: isosceles")
	elif(a!=b) and (b!=c) and (c!=a):
		print("Tipo de triangulo: escaleno")
	

	
		

	

-- OUTPUT:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
